--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -1,4 +1,9 @@
 /*general for homepage*/
+.nl-section.homepage .container-fluid {
+  max-width: 1650px;
+}
+
+
 .nl-section.homepage.football-homepage {
 
   .nl-team-list {
