--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -195,7 +195,7 @@ section.nl-section.nl-players.nl-live-score
 					table.table.table-info1
 						tbody
 							tr
-								td
+								td.left
 									div.leaders-list
 										p.tit First Game
 										p 09/14/2017 08:25 AM
