--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -188,9 +188,9 @@
 		}
 	}
 
-	.nl-team-list-table td:first-child {
-		text-align: left;
-	}
+	// .nl-team-list-table td:first-child {
+	// 	text-align: left;
+	// }
 
 	// .nl-my-teams .nl-team-list-table td:nth-child(1) {
 	// 	padding-left: 1.5rem;
@@ -372,6 +372,13 @@
 	background-color: #0f254f;
 	padding: 0.875rem 0 0 0;
 	margin: .25rem 0 1.5rem 0;
+
+	.table-info1 td {
+
+		&.left {
+			padding: 0.5em 0rem 0.25rem 1.25rem;
+		}
+	}
 
 	// Temp - needs custom dropdown
 	.dropdown {
@@ -617,7 +624,7 @@
 	}
 
 	.nl-contest-info-table .table-info4.contestants td, .nl-contest-info-table .table-info4.contestants tr  {
-		padding: 0.5rem;
+		padding: 0.25rem;
 	}
 
 	.nl-contest-info-table .table-info4 td:nth-child(1) {
@@ -683,7 +690,7 @@
 			padding: 0.5rem;
 
 			&:first-child {
-				text-align: left;
+				text-align: center;
 				width: 9%
 			}
 		}
