--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -29,7 +29,7 @@ section.nl-section.nl-players.nl-create-team
 
                             p.hidden-sm-down.title Rob Gronkowski
                             p.hidden-sm-down team : Patriots
-                            p.hidden-sm-down position: QB
+                            p.hidden-sm-down position: TE
                             p.hidden-sm-down salary: $89000
 
                         div.nl-players-search
