--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -69,7 +69,7 @@ header.nl-header-log
                                 li.nav-item
                                     a.nav-link(href="contests.html") CONTESTS
                                 li.nav-item
-                                    a.nav-link(href="players.html") PLAYERS
+                                    a.nav-link(href="players_football.html") PLAYERS
                                 li.nav-item
                                     a.nav-link(href="live_score.html") LIVE SCORES
                                 li.nav-item.dropdown
