--- a/markup/_layouts/_content/_homepage/top5-player-soccer.jade
+++ b/markup/_layouts/_content/_homepage/top5-player-soccer.jade
@@ -39,29 +39,29 @@ div.row
 		div.number
 			p.rank-player-top5.nr1 1
 		div.name-fix
-			p.name-top5 R. Grownkowski
+			p.name-top5 C. Ronaldo
 div.row
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="1")                
 		div.number
 			p.rank-player-top5 2
 		div.name-fix
-			p.name-top5 O. Beckham JR
+			p.name-top5 L. Messi
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="2")                
 		div.number
 			p.rank-player-top5 3
 		div.name-fix
-			p.name-top5 M. Ryan
+			p.name-top5 S. Ramos
 div.row
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="3")                
 		div.number
 			p.rank-player-top5 4
 		div.name-fix
-			p.name-top5 A. Rodgers
+			p.name-top5 T. Henry
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="4")                
 		div.number
 			p.rank-player-top5 5
 		div.name-fix
-			p.name-top5 D. Johnson
+			p.name-top5 A. Robben
 
 div.tab-content(id="top5-player-content")
 	div(role='tabpanel' class='tab-pane active top-level-panel' id='RB')
@@ -75,11 +75,11 @@ div.tab-content(id="top5-player-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-players-nav(style='display: block;')
-												img#top-player-nav(src='assets/img/player1.png', style='display: block;')
+												img#top-player-nav(src='assets/img/ronaldo.png', style='display: block;')
 											div.number
 												p 1
 											div.player-thumbnail-name
-												p Grownkowski
+												p Ronaldo
 											div.points-in-bar
 												p.points 121 PTS
 							li.nav-item
@@ -87,11 +87,11 @@ div.tab-content(id="top5-player-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-players-nav(style='display: block;')
-												img#top-player-nav(src='assets/img/player2.png', style='display: block;')
+												img#top-player-nav(src='assets/img/messi.png', style='display: block;')
 											div.number
 												p 2
 											div.player-thumbnail-name
-												p Beckham JR
+												p Messi
 											div.points-in-bar
 												p.points 121 PTS
 							li.nav-item
@@ -99,11 +99,11 @@ div.tab-content(id="top5-player-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-players-nav(style='display: block;')
-												img#top-player-nav(src='assets/img/player3.png', style='display: block;')
+												img#top-player-nav(src='assets/img/ramos.png', style='display: block;')
 											div.number
 												p 3
 											div.player-thumbnail-name
-												p Ryan
+												p Ramos
 											div.points-in-bar
 												p.points 121 PTS
 							li.nav-item
@@ -111,11 +111,11 @@ div.tab-content(id="top5-player-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-players-nav(style='display: block;')
-												img#top-player-nav(src='assets/img/player4.png', style='display: block;')
+												img#top-player-nav(src='assets/img/henry.png', style='display: block;')
 											div.number
 												p 4
 											div.player-thumbnail-name
-												p Rodgers
+												p Henry
 											div.points-in-bar
 												p.points 121 PTS
 							li.nav-item
@@ -123,11 +123,11 @@ div.tab-content(id="top5-player-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-players-nav(style='display: block;')
-												img#top-player-nav(src='assets/img/player5.png', style='display: block;')
+												img#top-player-nav(src='assets/img/robben.png', style='display: block;')
 											div.number
 												p 5
 											div.player-thumbnail-name
-												p Johnson
+												p Robben
 											div.points-in-bar
 												p.points 121 PTS
 						div.carousel-inner
@@ -136,12 +136,12 @@ div.tab-content(id="top5-player-content")
 									div#player1.tab-pane.active(role="tabpanel")
 										div.row.player
 											#top5-players-picture(style='display: block;')
-												img#top-player(src='assets/img/player1.png', style='display: block;')
+												img#top-player(src='assets/img/ronaldo.png', style='display: block;')
 												div.player-image-inner
 													div.number
 														p 1
 													div.name
-														p Rob Gronwkowski
+														p Cristiano Ronaldo
 													p.points 121 PTS 
 											div.player-info
 												p FP points
@@ -157,12 +157,12 @@ div.tab-content(id="top5-player-content")
 									div#player1.tab-pane.active(role="tabpanel")
 										div.row.player
 											#top5-players-picture(style='display: block;')
-												img#top-player(src='assets/img/player2.png', style='display: block;')
+												img#top-player(src='assets/img/messi.png', style='display: block;')
 												div.player-image-inner
 													div.number
 														p 2
 													div.name
-														p Odell Beckham JR
+														p Lionel Messi
 													p.points 121 PTS 
 											div.player-info
 												p FP points
@@ -178,12 +178,12 @@ div.tab-content(id="top5-player-content")
 									div#player1.tab-pane.active(role="tabpanel")
 										div.row.player
 											#top5-players-picture(style='display: block;')
-												img#top-player(src='assets/img/player3.png', style='display: block;')
+												img#top-player(src='assets/img/ramos.png', style='display: block;')
 												div.player-image-inner
 													div.number
 														p 3
 													div.name
-														p Matt Ryan
+														p Sergio Ramos
 													p.points 121 PTS 
 											div.player-info
 												p FP points
@@ -199,12 +199,12 @@ div.tab-content(id="top5-player-content")
 									div#player1.tab-pane.active(role="tabpanel")
 										div.row.player
 											#top5-players-picture(style='display: block;')
-												img#top-player(src='assets/img/player4.png', style='display: block;')
+												img#top-player(src='assets/img/henry.png', style='display: block;')
 												div.player-image-inner
 													div.number
 														p 4
 													div.name
-														p Aaron Rodgers
+														p Thierry Henry
 													p.points 121 PTS 
 											div.player-info
 												p FP points
@@ -220,12 +220,12 @@ div.tab-content(id="top5-player-content")
 									div#player1.tab-pane.active(role="tabpanel")
 										div.row.player
 											#top5-players-picture(style='display: block;')
-												img#top-player(src='assets/img/player5.png', style='display: block;')
+												img#top-player(src='assets/img/robben.png', style='display: block;')
 												div.player-image-inner
 													div.number
 														p 5
 													div.name
-														p David Johnson
+														p Arjen Robben
 													p.points 121 PTS 
 											div.player-info
 												p FP points
