--- a/markup/_layouts/_content/live_score_content_soccer.jade
+++ b/markup/_layouts/_content/live_score_content_soccer.jade
@@ -230,7 +230,7 @@ section.nl-section.nl-players.nl-live-score.soccer
 					table.table.table-info3
 						thead
 							tr
-								th
+								th Rank
 								th Contestant
 								th Score
 					div.nl-table-scroll3
