--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -219,7 +219,7 @@ section.nl-section.nl-players.nl-live-score
 					table.table.table-info3
 						thead
 							tr
-								th
+								th Rank
 								th Contestant
 								th Score
 					div.nl-table-scroll3
