updated friends to include in dropdown menu, faq also full height page

--- a/markup/_layouts/change_password.jade
+++ b/markup/_layouts/change_password.jade
@@ -14,7 +14,7 @@ html(lang="en")
     body
         .nl-wrapper
             //include _partials/preloader.jade
-            include _partials/header-form.jade
+            include _partials/header-log.jade
             main
                 include _content/change-password-content
 
