--- a/markup/_scss/fixes.scss
+++ b/markup/_scss/fixes.scss
@@ -17,7 +17,7 @@ html, body {
     flex: 0 0 auto;
   }
 
-  .contact-wrapper, .login-wrapper, .change-password-wrapper, .edit-profile-wrapper, .nl-my-contests, .friends-wrapper {
+  .contact-wrapper, .login-wrapper, .change-password-wrapper, .edit-profile-wrapper, .nl-my-contests, .friends-wrapper, .nl-faq {
     width: 100%;
   }
 
