--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -77,7 +77,7 @@ header.nl-header-log
                                     div.dropdown-menu(aria-labelledby="dropdownMenuLink2")
                                         a.dropdown-item(href="edit_profile.html") Profile
                                         a.dropdown-item(href="change_password.html") edit Password
-                                        a.dropdown-item(href="#") Friends 
+                                        a.dropdown-item(href="friends.html") Friends 
                                         a.dropdown-item(href="my_balances.html") My Balance
                                     
                                 li.nav-item.dropdown
