--- a/markup/_layouts/faq.jade
+++ b/markup/_layouts/faq.jade
@@ -12,14 +12,15 @@ html(lang="en")
         include _partials/styles.jade
 
     body
-        include _partials/header-log.jade
-        main
-            include _content/faq
+        .nl-wrapper
+            include _partials/header-log.jade
+            main
+                include _content/faq
 
-        //include _partials/login-modal.jade
-        //include _partials/registration-modal.jade
-        include _partials/footer-log.jade
-        include _partials/scripts.jade
+            //include _partials/login-modal.jade
+            //include _partials/registration-modal.jade
+            include _partials/footer-log.jade
+            include _partials/scripts.jade
 
 
 
