removed french written out in language bar, friends page also correct menu header

--- a/markup/_layouts/friends.jade
+++ b/markup/_layouts/friends.jade
@@ -14,8 +14,8 @@ html(lang="en")
     body
         .nl-wrapper
             //include _partials/preloader.jade
-            include _partials/header-form.jade
-            //- include _partials/header-log.jade
+            //include _partials/header-form.jade
+            include _partials/header-log.jade
             main
                 include _content/friends-content
 
