--- a/markup/_layouts/_content/players_football_content.jade
+++ b/markup/_layouts/_content/players_football_content.jade
@@ -26,8 +26,10 @@ section.nl-section.nl-players
 									button.btn.btn-secondary(type="button") <i class="fa fa-search" aria-hidden="true"></i>
 
 					ul.nav.nav-tabs(role="tablist")
-						li.nav-item
+						li.nav-item.hidden-xs-down
 							a.nav-link.active(data-toggle="tab" href="#all" role="tab") All players
+						li.nav-item.hidden-sm-up
+							a.nav-link.active(data-toggle="tab" href="#all" role="tab") All
 						li.nav-item
 							a.nav-link(data-toggle="tab" href="#qb" role="tab") QB
 						li.nav-item
