--- a/markup/_layouts/_content/change-password-content.jade
+++ b/markup/_layouts/_content/change-password-content.jade
@@ -6,7 +6,7 @@ section.nl-section.change-password-wrapper
                 .block-dialog(role='document')
                     .block-content
                         .block-header
-                            h2#changePasswordSectionLabel.modal-title Change Password
+                            h2#changePasswordSectionLabel.modal-title Edit Password
                         .block-body
                             form.form-signin
                                 .input-group
