--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -327,7 +327,12 @@
 		  font-size: 1rem;
 
 		  img {
-			width: 28px;
+			    width: 28px;
+			    min-width: 28px;
+			    max-width: 28px;
+			    height: 18px;
+			    max-height: 18px;
+			    min-height: 18px;
 		  }
 		  span {
 			float: left;
